@@ -8,13 +8,13 @@ class EwayManagedTest < Test::Unit::TestCase
 
     @valid_card='4444333322221111'
     @valid_customer_id='9876543211000'
-    
+
     @credit_card = credit_card(@valid_card)
     @declined_card = credit_card('4444111111111111')
 
     @amount = 100
 
-    @options = { :billing_address => { 
+    @options = { :billing_address => {
                   :address1 => '1234 My Street',
                   :address2 => 'Apt 1',
                   :company => 'Widgets Inc',
@@ -70,7 +70,7 @@ class EwayManagedTest < Test::Unit::TestCase
       @gateway.update(@valid_customer_id, @credit_card, { :billing_address => { :title => 'Mr.', :country => 'au' } })
     end
   end
-  
+
   def test_successful_purchase
     @gateway.expects(:ssl_post).returns(successful_purchase_response)
 
@@ -82,7 +82,7 @@ class EwayManagedTest < Test::Unit::TestCase
     assert_equal "123456", response.params['transaction_number']
     assert response.test?
   end
-  
+
   def test_expected_request_on_purchase
     @gateway.expects(:ssl_post).with { |endpoint, data, headers|
       # Compare the actual and expected XML documents, by converting them to Hashes first
@@ -92,24 +92,24 @@ class EwayManagedTest < Test::Unit::TestCase
     }.returns(successful_purchase_response)
     @gateway.purchase(@amount, @valid_customer_id, @options)
   end
-  
+
   def test_purchase_invoice_reference_comes_from_order_id_or_invoice
     options = @options.dup
 
     # invoiceReference == options[:order_id]
     options[:order_id] = 'order_id'
     options.delete(:invoice)
-    
+
     @gateway.expects(:ssl_post).with { |endpoint, data, headers|
       request_hash = Hash.from_xml(data)
       request_hash['Envelope']['Body']['ProcessPayment']['invoiceReference'] == 'order_id'
     }.returns(successful_purchase_response)
     @gateway.purchase(@amount, @valid_customer_id, options)
-    
+
     # invoiceReference == options[:invoice]
     options[:invoice] = 'invoice'
     options.delete(:order_id)
-    
+
     @gateway.expects(:ssl_post).with { |endpoint, data, headers|
       request_hash = Hash.from_xml(data)
       request_hash['Envelope']['Body']['ProcessPayment']['invoiceReference'] == 'invoice'
@@ -119,7 +119,7 @@ class EwayManagedTest < Test::Unit::TestCase
     # invoiceReference == options[:order_id] || options[:invoice]
     options[:order_id] = 'order_id'
     options[:invoice] = 'invoice'
-    
+
     @gateway.expects(:ssl_post).with { |endpoint, data, headers|
       request_hash = Hash.from_xml(data)
       request_hash['Envelope']['Body']['ProcessPayment']['invoiceReference'] == 'order_id'
@@ -146,7 +146,7 @@ class EwayManagedTest < Test::Unit::TestCase
     assert_equal "1234567", response.token
     assert response.test?
   end
-  
+
   def test_expected_request_on_store
     @gateway.expects(:ssl_post).with { |endpoint, data, headers|
       # Compare the actual and expected XML documents, by converting them to Hashes first
@@ -156,7 +156,7 @@ class EwayManagedTest < Test::Unit::TestCase
     }.returns(successful_store_response)
     @gateway.store(@credit_card, @options)
   end
-  
+
   def test_email_on_store_may_come_from_options_root_or_billing_address
     options = @options.dup
 
@@ -173,13 +173,13 @@ class EwayManagedTest < Test::Unit::TestCase
     # Desired Behavior
     options[:billing_address].delete(:email)
     options[:email] = 'email+root@example.com'
-    
+
     @gateway.expects(:ssl_post).with { |endpoint, data, headers|
       request_hash = Hash.from_xml(data)
       request_hash['Envelope']['Body']['CreateCustomer']['Email'] == 'email+root@example.com'
     }.returns(successful_store_response)
     @gateway.store(@credit_card, options)
-    
+
     # Precedence given to billing address when email is in both hashes (to support legacy behavior)
     options[:billing_address][:email] = 'email+billing@example.com'
     options[:email] = 'email+root@example.com'
@@ -207,13 +207,13 @@ class EwayManagedTest < Test::Unit::TestCase
     # Desired Behavior
     options[:billing_address].delete(:customer_ref)
     options[:customer] = 'customer_ref+root'
-    
+
     @gateway.expects(:ssl_post).with { |endpoint, data, headers|
       request_hash = Hash.from_xml(data)
       request_hash['Envelope']['Body']['CreateCustomer']['CustomerRef'] == 'customer_ref+root'
     }.returns(successful_store_response)
     @gateway.store(@credit_card, options)
-    
+
     # Precedence given to billing address when customer_ref is in both hashes (to support legacy behavior)
     options[:billing_address][:customer_ref] = 'customer_ref+billing'
     options[:customer] = 'customer_ref+root'
@@ -235,12 +235,32 @@ class EwayManagedTest < Test::Unit::TestCase
     assert response.test?
   end
 
+  def test_successful_retrieve
+    @gateway.expects(:ssl_post).returns(successful_retrieve_response)
+
+    assert response = @gateway.retrieve(@valid_customer_id)
+    assert_instance_of EwayManagedGateway::EwayResponse, response
+    assert_equal "OK", response.message
+    assert_success response
+    assert response.test?
+  end
+
+  def test_expected_retrieve_response
+    @gateway.expects(:ssl_post).with { |endpoint, data, headers|
+      # Compare the actual and expected XML documents, by converting them to Hashes first
+      expected = Hash.from_xml(expected_retrieve_request)
+      actual = Hash.from_xml(data)
+      expected == actual
+    }.returns(successful_retrieve_response)
+    @gateway.retrieve(@valid_customer_id)
+  end
+
   def test_default_currency
     assert_equal 'AUD', EwayManagedGateway.default_currency
   end
-  
+
   private
-  
+
   def successful_purchase_response
     <<-XML
 <?xml version="1.0" encoding="utf-8"?>
@@ -291,7 +311,26 @@ class EwayManagedTest < Test::Unit::TestCase
 </soap12:Envelope>
     XML
   end
-  
+
+  # Documented here: https://www.eway.com.au/gateway/ManagedPaymentService/managedCreditCardPayment.asmx?op=QueryCustomer
+  def successful_retrieve_response
+    <<-XML
+    <?xml version="1.0" encoding="utf-8"?>
+    <soap12:Envelope xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:soap12="http://www.w3.org/2003/05/soap-envelope">
+      <soap12:Body>
+        <QueryCustomerResponse xmlns="https://www.eway.com.au/gateway/managedpayment">
+        <QueryCustomerResult>
+          <CCName>#{@credit_card.first_name} #{@credit_card.last_name}</CCName>
+          <CCNumber>#{@credit_card.number}</CCNumber>
+          <CCExpiryMonth>#{sprintf("%.2i", @credit_card.month)}</CCExpiryMonth>
+          <CCExpiryYear>#{sprintf("%.4i", @credit_card.year)[-2..-1]}</CCExpiryYear>
+        </QueryCustomerResult>
+        </QueryCustomerResponse>
+      </soap12:Body>
+    </soap12:Envelope>
+    XML
+  end
+
   # Documented here: https://www.eway.com.au/gateway/ManagedPaymentService/managedCreditCardPayment.asmx?op=CreateCustomer
   def expected_store_request
     <<-XML
@@ -356,5 +395,26 @@ class EwayManagedTest < Test::Unit::TestCase
 </soap12:Envelope>
       XML
     end
+
+    # Documented here: https://www.eway.com.au/gateway/ManagedPaymentService/managedCreditCardPayment.asmx?op=QueryCustomer
+  def expected_retrieve_request
+    <<-XML
+  <?xml version="1.0" encoding="utf-8"?>
+  <soap12:Envelope xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:soap12="http://www.w3.org/2003/05/soap-envelope">
+    <soap12:Header>
+      <eWAYHeader xmlns="https://www.eway.com.au/gateway/managedpayment">
+        <eWAYCustomerID>login</eWAYCustomerID>
+        <Username>username</Username>
+        <Password>password</Password>
+      </eWAYHeader>
+    </soap12:Header>
+    <soap12:Body>
+      <QueryCustomer xmlns="https://www.eway.com.au/gateway/managedpayment">
+        <managedCustomerID>#{@valid_customer_id}</managedCustomerID>
+      </QueryCustomer>
+    </soap12:Body>
+  </soap12:Envelope>
+    XML
+  end
 
 end
